code/grammar.txt
program:
  | statement program
  | EOF

statement:
  | 'if' if_definition
  | 'jutsu' function_definition
  | 'release' expression
  | expression

function_def:

if_stmt:

elif_stmt:

else_stmt:

assignment:
  | NAME '=' expression

expression:
  | unary_primitive
  | binary_primitive
  | atom

unary_primitive:
  | unary_operator expression
  | 'print' expression

unary_operator
  | '!' | '-'

binary_primitive:
  | binary_precedence(0)

binary_precedence:
  | binary_atom {binary_operator binary_precedence}

binary_atom:
  | unary_operator binary_precedence(q)
  | '(' binary_primitive ')'
  | atom

binary_operator:
'or' | 'and' | '+' | '-' | '*' | '/' | '//' | '%' | '**' | '==' | '!=' | '<' | '>' | '<=' | '>='

atom:
  | INT
  | STRING
  | NAME
  | TRUE
  | FALSE
